--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "config": "^3.3.7",
     "express": "^4.18.1",
+    "mongodb-memory-server": "^8.7.2",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
@@ -21,6 +25,7 @@
     "chai-http": "^4.3.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
+    "nyc": "^15.1.0",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
@@ -28,6 +33,25 @@
     "dev": "export NODE_ENV=dev && nodemon --exec ts-node --watch src ./src/server.ts",
     "build": "tsc --project ./",
     "start": "export NODE_ENV=dev && node target/server.js",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts --timeout 1000"
-  }
+    "test": "mocha -r ts-node/register test/**/*.spec.ts --exit",
+    "test:nyc": "nyc npm test"
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "check-coverage": true,
+    "all": true,
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "test/**/*.*"
+    ],
+    "reporter": [
+        "html",
+        "lcov",
+        "text",
+        "text-summary"
+    ],
+    "report-dir": "coverage"
+}
 }
