--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "body-parser": "^1.20.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "compression": "^1.7.4",
     "config": "^3.3.7",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "fs": "^0.0.1-security",
+    "helmet": "^5.1.0",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongodb-memory-server": "^8.7.2",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@types/compression": "^1.7.2",
     "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.1",
@@ -30,7 +37,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "dev": "export NODE_ENV=dev && nodemon --exec ts-node --watch src ./src/server.ts",
+    "dev": "export NODE_ENV=dev && export DEBUG=compression NODE_DEBUG=validationMiddleware && nodemon --exec ts-node --watch src ./src/server.ts",
     "build": "tsc --project ./",
     "start": "export NODE_ENV=dev && node target/server.js",
     "test": "mocha -r ts-node/register test/**/*.spec.ts --exit",
@@ -41,17 +48,17 @@
     "check-coverage": true,
     "all": true,
     "include": [
-        "src/**/*.ts"
+      "src/**/*.ts"
     ],
     "exclude": [
-        "test/**/*.*"
+      "test/**/*.*"
     ],
     "reporter": [
-        "html",
-        "lcov",
-        "text",
-        "text-summary"
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
     ],
     "report-dir": "coverage"
-}
+  }
 }
